<resources>
    <string name="app_name">AnimationAndroidExamples</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_property_animation">PropertyAnimation</string>
    <string name="title_view_animation">ViewAnimation</string>
    <string name="title_activity_table">TableActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_view_animation">Hello view animation fragment</string>
    <string name="hello_property_animation">Hello property animation fragment</string>
    <string name="contentDescription">contentDescription</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
