<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/view_animation"
        android:icon="@drawable/ic_view_animation_sys_24dp"
        android:title="@string/title_view_animation"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/property_animation"
        android:icon="@drawable/ic_property_animation_sys_24dp"
        android:title="@string/title_property_animation"
        app:showAsAction="always"/>
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"
        app:showAsAction="ifRoom"/>

</menu>
